fix: refine character sprite alignment with custom background offsets

--- a/styles.css
+++ b/styles.css
@@ -421,12 +421,12 @@ button {
 .player-token {
   position: absolute;
   /* 
-     Sheet: 2554 x 1702 (4x2 grid)
-     Frame: 638.5 x 851
-     New dimensions: 116px x 155px (Maintains ~0.75 aspect ratio)
+     User requested dimensions: 96px x 128px
+     Sheet is 4 cols x 2 rows.
+     Total background size: 96*4 = 384px, 128*2 = 256px
   */
-  width: 116px;
-  height: 155px;
+  width: 96px;
+  height: 128px;
   pointer-events: none;
   transition:
     left 230ms linear,
@@ -434,25 +434,24 @@ button {
   z-index: 5;
   background-image: url('./assets/player1/p1(default).png');
   background-repeat: no-repeat;
-  /* 116 * 4 = 464, 155 * 2 = 310 */
-  background-size: 464px 310px;
+  background-size: 384px 256px;
   image-rendering: pixelated;
 }
 
 /* 
-   Calculate exact pixel offsets:
-   Col width = 116px
-   Row height = 155px
+   Direction States with -43px -7px user-calibrated offset
+   Col width = 96px, Row height = 128px
 */
-.player-token[data-facing="SE"] { background-position: 0px 0px; }
-.player-token[data-facing="NE"] { background-position: -116px 0px; }
-.player-token[data-facing="NW"] { background-position: -232px 0px; }
-.player-token[data-facing="SW"] { background-position: -348px 0px; }
+.player-token[data-facing="SE"] { background-position: -43px -7px; }
+.player-token[data-facing="NE"] { background-position: -139px -7px; }
+.player-token[data-facing="NW"] { background-position: -235px -7px; }
+.player-token[data-facing="SW"] { background-position: -331px -7px; }
 
-.player-token.is-jumping[data-facing="SE"] { background-position: 0px -155px; }
-.player-token.is-jumping[data-facing="NE"] { background-position: -116px -155px; }
-.player-token.is-jumping[data-facing="NW"] { background-position: -232px -155px; }
-.player-token.is-jumping[data-facing="SW"] { background-position: -348px -155px; }
+/* Jumping (Row 2) offsets: Base + 128px vertical shift */
+.player-token.is-jumping[data-facing="SE"] { background-position: -43px -135px; }
+.player-token.is-jumping[data-facing="NE"] { background-position: -139px -135px; }
+.player-token.is-jumping[data-facing="NW"] { background-position: -235px -135px; }
+.player-token.is-jumping[data-facing="SW"] { background-position: -331px -135px; }
 
 .player-token.is-travelling {
   /* We manage the visual jump via JavaScript/CSS class 'is-jumping' */
